# 2048-Cpp

./: README.md
Game2048Cpp/: Animations.cpp  Animations.h  CMakeLists.txt  Mechanics.cpp  Mechanics.h  main.cpp
